--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -6,11 +6,20 @@
     width: 900px;
     margin: 0 auto;
     line-height: 1.7;
-    font-family: Garamond;
     text-align: justify;
 }
 
 .checkout-content img {
     width: 400px;
     height: 400px;
+}
+
+.formulaire {
+    margin-top: 100px;
+    float: left;
+}
+
+.formulaire button {
+    width: 180px;
+    border-radius: none;
 }
